# laboratorioProgrammazione

./: Activity.cpp  Activity.h  App.cpp  App.h  CMakeLists.txt  Date.cpp  Date.h  MainFrame.cpp  MainFrame.h  README.md  Register.cpp  Register.h  Time.cpp  Time.h  main.cpp
test/: ActivityFixture.cpp  ActivityTest.cpp  CMakeLists.txt  DateFixture.cpp  DateTest.cpp  RegisterFixture.cpp  RegisterTest.cpp  Tests.cpp  TimeFixture.cpp  TimeTest.cpp
